[package]
name = "Client"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.5.6"
image = "0.21.0"
steganography = "1.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
bincode = "1.3"
minifb = "0.25"


[[bin]]
name = "client"  # This is the name of the binary
path = "src/client.rs"  # This is the path to your source code file